# yak

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  bootup_ascii.txt  build.zig  build.zig.zon  ld_base.sh  xmake.lua
kernel/: CMakeLists.txt  xmake.lua
kernel/arch/generic-limine/: CMakeLists.txt  entry.c  fb.c  fireworks.c  request.h  xmake.lua
kernel/arch/riscv64/: entry.c  linker.lds  xmake.lua
kernel/arch/x86_64/: ABI.md  CMakeLists.txt  idt.S  linker.lds  main.c  sample_syscall.h  xmake.lua
kernel/fs/: CMakeLists.txt  devfs.c  tmpfs.c  xmake.lua
kernel/fs/tmpfs/: tmpfs.c
kernel/include/: assert.h  config.h  string.h
kernel/include/yak/: byte-macros.h  cleanup.h  cpu.h  cpudata.h  dpc.h  elf.h  elf32.h  elf64.h  elf_common.h  file.h  hashtable.h  heap.h  hint.h  init.h  initrd.h  ipl.h  irq.h  jobctl.h  kernel-file.h  kevent.h  list.h  log.h  macro.h  mutex.h  object.h  (+20 more)
kernel/include/yak-abi/: errno.h  fcntl.h  syscall.h  termios.h  vm-flags.h
kernel/include/yak-private/: profiler.h  slab_impl.h
kernel/io/: Array.cc  CMakeLists.txt  Device.cc  Dictionary.cc  IoRegistry.cc  PciBus.cc  PciPersonality.cc  String.cc  console.c  device.cc  dictionary.cc  init.c  init.cc  object.cc  pci-utils.h  pci.cc  registry.cc  string.cc  test.cc  xmake.lua
kernel/src/: CMakeLists.txt  art.h  cpudata.c  elf.c  file.c  hashtable.c  init.c  init_node.c  initrd.c  jobctl.c  kevent.c  kinfo.c  mutex.c  object.c  panic.c  printk.c  ringbuffer.c  root.c  rwlock.c  semaphore.c  spinlock.c  status.c  subr_tree.c  timer.c
(+180 files in other folders)
